<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
    android:background="@color/g1_blancocrema"
        >
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="REGISTRO DE ASEGURADO"
            android:textAlignment="center"
            android:textColor="@color/negro1"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_nom_pac_re"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/lbl_nombre"
            />


        <EditText
            android:id="@+id/edt_ape_pac_re"
            android:layout_width="fill_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_apellido"
            />

        <EditText
            android:id="@+id/edt_dni_pac_re"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="DNI"
            />

        <EditText
            android:id="@+id/edt_email_pac_re"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/lbl_email"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:text="Fecha de Nacimiento"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_fnacimiento"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginStart="25dp"
                android:layout_marginRight="1dp"
                android:backgroundTint="@color/negro1"
                android:background="@drawable/calendario"
                />
            <EditText

                android:id="@+id/edt_fnac_pac_re"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_fecha"
                android:layout_marginStart="10dp"
                android:inputType="date"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_cell_pac_re"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="number"
            android:hint="@string/lbl_celular"
            />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="Estado Civil"
                android:textSize="18dp"
                />
            <Spinner
                android:id="@+id/spn_ec_pac_re"
                android:entries="@array/spnrEstadoCivil"
                android:textAlignment="center"
                android:layout_width="200dp"
                android:layout_marginTop="6dp"
                android:layout_height="wrap_content"
                >
            </Spinner>

        </LinearLayout>


        <Button
            android:id="@+id/btn_registrar_pac_re"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="230dp"
            android:background="@color/naranja2"
            android:textColor="@color/g1_blancocrema"
            android:textSize="17dp"
            android:text="Registrar" />
    </LinearLayout>

    </ScrollView>
    </LinearLayout>

